@@ -19,3 +19,5 @@ pt_or
 pt_random
 pt_render
 pt_xor
+pt_tape2txt
+pt_setmsb
