@@ -3,6 +3,7 @@
 	plain text by ignoring NUL bytes (i.e., tape leader) and clearing
 	the most significant bit.
 	Added pt_setmsb to set most significant bit of non-NUL bytes.
+	Added pt_tapein.py utility.
 
 1.0:
 	First release of papertape suite.
